Visuales y efectos css para la vista home

--- a/index.html
+++ b/index.html
@@ -7,6 +7,11 @@
     <title>Bsale Front</title>
 
     <link rel="stylesheet" href="style.css" />
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"
+    />
+
     <script
       src="https://kit.fontawesome.com/7e5b2d153f.js"
       crossorigin="anonymous"
@@ -17,7 +22,7 @@
     <header class="header">
       <nav class="nav">
         <img
-          class="logoB"
+          class="logoB animate__animated animate__bounceInDown animate__delay-2s"
           src="https://dojiw2m9tvv09.cloudfront.net/4/8/img-logos-logo-bsale-blanco-mobile.png?3035"
           srcset="
             https://dojiw2m9tvv09.cloudfront.net/4/8/img-logos-logo-bsale-blanco.png?3035
@@ -54,6 +59,29 @@
         </ul>
       </nav>
     </header>
-    <main></main>
+    <main>
+      <div class="h">
+        <div class="home">
+          <!-- <h1 class="titulo animate__animated animate__fadeInUp">
+            Tu mejor tienda online
+          </h1> -->
+          <div class="titulo animate__animated animate__fadeIn animate__slow">
+            <h1 aria-label="BSDrinks"></h1>
+          </div>
+          <div
+            class="busqueda animate__animated animate__fadeIn animate__slow animate__delay-2s"
+          >
+            <div class="tituloInput">
+              <img
+                src="https://static.vecteezy.com/system/resources/previews/009/589/346/non_2x/magnifying-icon-magnifying-clipart-transparent-free-png.png"
+                class="lupa"
+              />
+              <h2>Busca Aqui!</h2>
+            </div>
+            <input type="text" class="input" />
+          </div>
+        </div>
+      </div>
+    </main>
   </body>
 </html>
