Estructura inicial home, mas cards y grid de productos, todo estatico

--- a/index.html
+++ b/index.html
@@ -62,9 +62,6 @@
     <main>
       <div class="h">
         <div class="home">
-          <!-- <h1 class="titulo animate__animated animate__fadeInUp">
-            Tu mejor tienda online
-          </h1> -->
           <div class="titulo animate__animated animate__fadeIn animate__slow">
             <h1 aria-label="BSDrinks"></h1>
           </div>
@@ -79,6 +76,115 @@
               <h2>Busca Aqui!</h2>
             </div>
             <input type="text" class="input" />
+          </div>
+        </div>
+        <div
+          class="container animate__animated animate__fadeIn animate__slow animate__delay-3s"
+        >
+          <div class="card">
+            <div class="card-image">
+              <img
+                src="https://dojiw2m9tvv09.cloudfront.net/11132/product/misterbig3308256.jpg"
+                alt="..."
+              />
+              <i class="bx bx-star"></i>
+            </div>
+            <div class="card-content">
+              <h3>Titulo</h3>
+              <p>Descripcion del producto</p>
+              <h3>$1000</h3>
+              <button class="add-to-cart">Comprar</button>
+            </div>
+          </div>
+          <div class="card">
+            <div class="card-image">
+              <img
+                src="https://dojiw2m9tvv09.cloudfront.net/11132/product/misterbig3308256.jpg"
+                alt="..."
+              />
+              <i class="bx bx-star"></i>
+            </div>
+            <div class="card-content">
+              <h3>Titulo</h3>
+              <p>Descripcion del producto</p>
+              <h3>$1000</h3>
+              <button class="add-to-cart">Comprar</button>
+            </div>
+          </div>
+          <div class="card">
+            <div class="card-image">
+              <img
+                src="https://dojiw2m9tvv09.cloudfront.net/11132/product/misterbig3308256.jpg"
+                alt="..."
+              />
+              <i class="bx bx-star"></i>
+            </div>
+            <div class="card-content">
+              <h3>Titulo</h3>
+              <p>Descripcion del producto</p>
+              <h3>$1000</h3>
+              <button class="add-to-cart">Comprar</button>
+            </div>
+          </div>
+          <div class="card">
+            <div class="card-image">
+              <img
+                src="https://dojiw2m9tvv09.cloudfront.net/11132/product/misterbig3308256.jpg"
+                alt="..."
+              />
+              <i class="bx bx-star"></i>
+            </div>
+            <div class="card-content">
+              <h3>Titulo</h3>
+              <p>Descripcion del producto</p>
+              <h3>$1000</h3>
+              <button class="add-to-cart">Comprar</button>
+            </div>
+          </div>
+          <div class="card">
+            <div class="card-image">
+              <img
+                src="https://dojiw2m9tvv09.cloudfront.net/11132/product/misterbig3308256.jpg"
+                alt="..."
+              />
+              <i class="bx bx-star"></i>
+            </div>
+            <div class="card-content">
+              <h3>Titulo</h3>
+              <p>Descripcion del producto</p>
+              <h3>$1000</h3>
+              <button class="add-to-cart">Comprar</button>
+            </div>
+          </div>
+          <div class="card">
+            <div class="card-image">
+              <img
+                src="https://dojiw2m9tvv09.cloudfront.net/11132/product/misterbig3308256.jpg"
+                alt="..."
+              />
+              <i class="bx bx-star"></i>
+            </div>
+            <div class="card-content">
+              <h3>Titulo</h3>
+              <p>Descripcion del producto</p>
+              <h3>$1000</h3>
+              <button class="add-to-cart">Comprar</button>
+            </div>
+          </div>
+          <div class="card">
+            <div class="card-image">
+              <img
+                src="https://dojiw2m9tvv09.cloudfront.net/11132/product/misterbig3308256.jpg"
+                alt="..."
+              />
+              <i class="bx bx-star"></i>
+            </div>
+            <div class="card-content">
+              <h3>Titulo</h3>
+              <p>Descripcion del producto</p>
+              <h3>$1000</h3>
+              <button class="add-to-cart">Comprar</button>
+            </div>
           </div>
         </div>
       </div>
