Home dinamico, con cards mapeadas en base a la respuesta de la api

--- a/index.html
+++ b/index.html
@@ -78,113 +78,10 @@
             <input type="text" class="input" />
           </div>
         </div>
-        <div
+        <div id="data"
           class="container animate__animated animate__fadeIn animate__slow animate__delay-3s"
         >
-          <div class="card">
-            <div class="card-image">
-              <img
-                src="https://dojiw2m9tvv09.cloudfront.net/11132/product/misterbig3308256.jpg"
-                alt="..."
-              />
-              <i class="bx bx-star"></i>
-            </div>
-            <div class="card-content">
-              <h3>Titulo</h3>
-              <p>Descripcion del producto</p>
-              <h3>$1000</h3>
-              <button class="add-to-cart">Comprar</button>
-            </div>
-          </div>
-          <div class="card">
-            <div class="card-image">
-              <img
-                src="https://dojiw2m9tvv09.cloudfront.net/11132/product/misterbig3308256.jpg"
-                alt="..."
-              />
-              <i class="bx bx-star"></i>
-            </div>
-            <div class="card-content">
-              <h3>Titulo</h3>
-              <p>Descripcion del producto</p>
-              <h3>$1000</h3>
-              <button class="add-to-cart">Comprar</button>
-            </div>
-          </div>
-          <div class="card">
-            <div class="card-image">
-              <img
-                src="https://dojiw2m9tvv09.cloudfront.net/11132/product/misterbig3308256.jpg"
-                alt="..."
-              />
-              <i class="bx bx-star"></i>
-            </div>
-            <div class="card-content">
-              <h3>Titulo</h3>
-              <p>Descripcion del producto</p>
-              <h3>$1000</h3>
-              <button class="add-to-cart">Comprar</button>
-            </div>
-          </div>
-          <div class="card">
-            <div class="card-image">
-              <img
-                src="https://dojiw2m9tvv09.cloudfront.net/11132/product/misterbig3308256.jpg"
-                alt="..."
-              />
-              <i class="bx bx-star"></i>
-            </div>
-            <div class="card-content">
-              <h3>Titulo</h3>
-              <p>Descripcion del producto</p>
-              <h3>$1000</h3>
-              <button class="add-to-cart">Comprar</button>
-            </div>
-          </div>
-          <div class="card">
-            <div class="card-image">
-              <img
-                src="https://dojiw2m9tvv09.cloudfront.net/11132/product/misterbig3308256.jpg"
-                alt="..."
-              />
-              <i class="bx bx-star"></i>
-            </div>
-            <div class="card-content">
-              <h3>Titulo</h3>
-              <p>Descripcion del producto</p>
-              <h3>$1000</h3>
-              <button class="add-to-cart">Comprar</button>
-            </div>
-          </div>
-          <div class="card">
-            <div class="card-image">
-              <img
-                src="https://dojiw2m9tvv09.cloudfront.net/11132/product/misterbig3308256.jpg"
-                alt="..."
-              />
-              <i class="bx bx-star"></i>
-            </div>
-            <div class="card-content">
-              <h3>Titulo</h3>
-              <p>Descripcion del producto</p>
-              <h3>$1000</h3>
-              <button class="add-to-cart">Comprar</button>
-            </div>
-          </div>
-          <div class="card">
-            <div class="card-image">
-              <img
-                src="https://dojiw2m9tvv09.cloudfront.net/11132/product/misterbig3308256.jpg"
-                alt="..."
-              />
-              <i class="bx bx-star"></i>
-            </div>
-            <div class="card-content">
-              <h3>Titulo</h3>
-              <p>Descripcion del producto</p>
-              <h3>$1000</h3>
-              <button class="add-to-cart">Comprar</button>
-            </div>
+         
           </div>
         </div>
       </div>
