Home dinamico, con navbar mapeados en base a resp de api

--- a/index.html
+++ b/index.html
@@ -34,28 +34,8 @@
           <i class="fas fa-bars"></i>
         </button>
 
-        <ul class="nav-menu">
-          <li class="nav-menu-item">
-            <a href="#" class="nav-menu-link nav-link">Bebida Energetica</a>
-          </li>
-          <li class="nav-menu-item">
-            <a href="#" class="nav-menu-link nav-link">Pisco</a>
-          </li>
-          <li class="nav-menu-item">
-            <a href="#" class="nav-menu-link nav-link">Ron</a>
-          </li>
-          <li class="nav-menu-item">
-            <a href="#" class="nav-menu-link nav-link">Bebida</a>
-          </li>
-          <li class="nav-menu-item">
-            <a href="#" class="nav-menu-link nav-link">Snack</a>
-          </li>
-          <li class="nav-menu-item">
-            <a href="#" class="nav-menu-link nav-link">Cerveza</a>
-          </li>
-          <li class="nav-menu-item">
-            <a href="#" class="nav-menu-link nav-link">Vodka</a>
-          </li>
+        <ul class="nav-menu" id="navbar">
+        
         </ul>
       </nav>
     </header>
